Commander Genius Release v0.3.1.0 (CloneKeenPlus):
--------------------------------------------------

06-12-2009
- Player doesn't fall anymore when level starts
- Autoraygun option is working correctly again!
- Godmode on map is working correctly again
- The option level-replayability is working once again!
- Yorps are screaming correctly again, when they are shot

05-12-2009
- New Playgame Engine System
- The entire Code has been rewritten in order to support more games (Galaxy for example)
- Much more solid engine
- New and innovative Savegame System (Pizza2004)
- New Physics [WIP] (Tulip)
- Better timer that makes the game much faster (Pickle)

Commander Genius Release v0.3.0.4 (CloneKeenPlus):
--------------------------------------------------
24-09-2009
- New Map System. Now maps of any size can be used for CG

11-09-2009
- many bugs fixes (Many thanks to James K. Beard)
- Graphical improvements and performance (Pickle)

06-09-2009
- The new Graphics Engine is fully implemented and can 
  handle and speedup all the graphics (tiles, sprites, bitmaps, etc)
- Improved Sound-System. Now 16 Bit is supported! (Many thanks to Pickle for his work!)
- Improved 2-player camera and minor issues! (Many thanks to Pizza2004!)

31-08-2009
- graphics system nearly fully implemented
- load menu cancel fixed
- deleted savegames that came with
- changed the way the camera works while in 2 player mode

26-08-2009
- better twirl on menus
- fixed some bugs that basically froze gameplay
- fixed and improved the aspect ratio feature
- beginnings of new graphics system implemented

25-08-2009
- New Palette system (Thanks to Caitlin Shaw)
- Physics improvement (Thanks to guys of the PCKF Forum)
- Added TGA Graphics
- fixed some bugs that were in the new Timer
- Added new item rising effect (Caitlin Shaw)

23-08-2009
- Improved the timer much more. (Many thanks to Pickle!!!)
- Solved message box bugs in Ep2.

21-08-2009